// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alias command getAlias handles no matches for supplied pattern 1`] = `Array []`;

exports[`alias command getAlias matches all aliases with empty pattern 1`] = `
Array [
  Array [
    "default → stable (1.15.2)",
  ],
  Array [
    "abc → b (N/A)",
  ],
  Array [
    "bcd → z (N/A)",
  ],
  Array [
    "xyz → 1.13 (1.13.0)",
  ],
  Array [
    "latest → 1.15.2",
  ],
  Array [
    "stable → 1.15.2",
  ],
  Array [
    "system → N/A",
  ],
]
`;

exports[`alias command getAlias matches only supplied pattern 1`] = `
Array [
  Array [
    "abc → b (N/A)",
  ],
  Array [
    "bcd → z (N/A)",
  ],
]
`;

exports[`alias command setAlias handles invalid version 1`] = `
Array [
  Array [
    "def → invalid (N/A)",
  ],
]
`;

exports[`alias command setAlias sets alias correctly 1`] = `
Array [
  Array [
    "def → 1.15 (1.15.2)",
  ],
]
`;
